css/main.css
/*import other files */
@import 'project.css';
@import 'navbar.css';
@import 'footer.css';

body {
  font-family: 'Quicksand', sans-serif;
  font-size: 1.5rem;
  margin: 0 auto;
  background-color: white;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  color: #b49996;
}

p {
  font-family: 'Quicksand', sans-serif;
  font-size: 1.5rem;
  font-weight: 500;
  color: #373741;
}

.sabrina-btn {
  background-color: #b49996;
  color: white;
}

.container h2 {
  font-family: 'Lato', sans-serif;
  font-size: 2.75rem;
  font-weight: 400;
  text-transform: uppercase;
  color: #b49996;
  opacity: 0.7;
  margin-top: 0px;
}

#site-section {
  height: 100vh;
  width: 100%;
}

.section-content {
  padding-left: 2.5rem;
  width: 90%;
}

.section-content i {
  color: #b49996;
  opacity: 0.8;
}

/*home page*/
#home-page {
  height: 100vh;
  width: 100%;
}

.home-content {
  padding-left: 2.5rem;
}

.home-content i {
  color: #b49996;
  opacity: 0.8;
}

.main-title {
  font-family: 'Lato', sans-serif;
  font-size: 6.5rem;
  font-weight: 900;
  text-transform: uppercase;
  color: #b49996;
  margin-bottom: 0px;
  margin-top: 0px;
}

/*portfolio section */
.portfolio-content {
  width: 90% !important;
}
.portfolio-content h2 {
  margin-bottom: 2rem;
}

.portfolio-content i {
  margin-top: 1.25rem;
}
/*contact section*/
.contact-content li a {
  opacity: 0.8;
}


/*MOBILE DEVICES*/
@media screen and (max-width: 940px) {
  .section-content {
    width: 100%;
    padding-right: 2.5rem;
  }

  .home-content {
    padding-right: 2.5rem;
  }
}

